--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           cols="30"
           rows="10"
         ></textarea>
-        <button type="submit" value="Submit">Save</button>
+        <button id = "buttonSave" type="submit" value="Submit">Save</button>
       </form>
     </section>
   </body>
