--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         </div>
       </div>
     </section>
-
+    <button type="button" id="editCompanyBtn" class="open-edit-form-button2">
+      <i class="fas fa-edit"></i> Edit Products
+    </button>
     <section class="whats-new">
       <div class="container">
         <h2>NEWS & OFFERS</h2>
@@ -130,5 +132,56 @@
         <button id = "buttonSave" type="submit" value="Submit">Save</button>
       </form>
     </section>
+<!--Personalización de Productos-->
+    <section class="form-container hidden" id="productForm">
+      <div class="close-from-button" id="closeProductsFormBtn">
+        <span>x</span>
+      </div>
+      <form action="" id="#productsForm">
+
+
+        <label for="product-image">Image URL Product 1</label>
+        <input
+          type="url"
+          name="product-image"
+          id="productImageURLInput1"
+          required
+        />
+        <label for="product-name">Product name</label>
+        <input type="text" name="product" id="productNameInput1" />
+
+        <label for="product-price">Price</label>
+        <input type="text" name="price" id="productPriceInput1" />
+
+        <label for="product-image">Image URL Product 2</label>
+        <input
+          type="url"
+          name="product-image"
+          id="productImageURLInput2"
+          required
+        />
+        <label for="product-name">Product name</label>
+        <input type="text" name="product" id="productNameInput2" />
+
+        <label for="product-price">Price</label>
+        <input type="text" name="price" id="productPriceInput2" />
+
+        <label for="product-image">Image URL Product 3</label>
+        <input
+          type="url"
+          name="product-image"
+          id="productImageURLInput3"
+          required
+        />
+        <label for="product-name">Product name</label>
+        <input type="text" name="product" id="productNameInput3" />
+
+        <label for="product-price">Price</label>
+        <input type="text" name="price" id="productPriceInput3" />
+
+        <button id = "buttonSave" type="submit" value="Submit">Save</button>
+      </form>
+    </section>
   </body>
 </html>
+
