--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
     </section>
-    <button type="button" id="editCompanyBtn" class="open-edit-form-button2">
+    <button type="button" id="editProductBtn" class="open-edit-form-button2">
       <i class="fas fa-edit"></i> Edit Products
     </button>
     <section class="whats-new">
@@ -134,7 +134,7 @@
     </section>
 <!--Personalización de Productos-->
     <section class="form-container hidden" id="productForm">
-      <div class="close-from-button" id="closeProductsFormBtn">
+      <div class="close-from-button" id="closeProductFormBtn">
         <span>x</span>
       </div>
       <form action="" id="#productsForm">
@@ -179,7 +179,7 @@
         <label for="product-price">Price</label>
         <input type="text" name="price" id="productPriceInput3" />
 
-        <button id = "buttonSave" type="submit" value="Submit">Save</button>
+        <button id = "buttonSaveProducts" type="submit" value="Submit">Save</button>
       </form>
     </section>
   </body>
