historia 3.5 guardar los datos y modificarlos

--- a/index.html
+++ b/index.html
@@ -64,33 +64,36 @@
         <h2>NEWS & OFFERS</h2>
         <div class="product-grid">
           <div class="product-card">
-            <img
+            <img 
+            id="imagenproducto1"
               src="https://c8.alamy.com/comp/2CH190N/photo-of-green-wet-vegetable-set-with-water-drops-2CH190N.jpg"
               alt="Green vegetables pack"
             />
             <div class="product-info">
-              <h3>Green Vegetables</h3>
-              <p>$9.99</p>
+              <h3 id="nombreproducto1">Green Vegetables</h3>
+              <p id="precioproducto1">$9.99</p>
             </div>
           </div>
           <div class="product-card">
             <img
+            id="imagenproducto2"
               src="https://www.fruitypack.com/assets/files/w-star-mix-1.960x640.jpg"
               alt="Fruit cart packs"
             />
             <div class="product-info">
-              <h3>Fruit Pack</h3>
-              <p>$14.99</p>
+              <h3 id="nombreproducto2">Fruit Pack</h3>
+              <p id="precioproducto2">$14.99</p>
             </div>
           </div>
           <div class="product-card">
             <img
+            id="imagenproducto3"
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEX1cf3cY-2yQOnyP2eWFnqUy9G5B5gbyP2Q&s"
               alt="Lemons & orange packs"
             />
             <div class="product-info">
-              <h3>Lemons and Oranges</h3>
-              <p>$7.99</p>
+              <h3 id="nombreproducto3">Lemons and Oranges</h3>
+              <p id="precioproducto3">$7.99</p>
             </div>
           </div>
         </div>
